# by-Heart_REV-1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  DEMO_SCRIPT.md  KAGGLE_WRITEUP.md  LICENSE  NOTICE  PUBLIC_DOMAIN.md  README.md  agents-cli-manifest.yaml  cloudbuild.yaml  pyproject.toml
.claude/skills/provenance-gate/: SKILL.md
.claude/skills/stride-threat-model/: SKILL.md
app/: __init__.py  app.py  demo.py  graph_build.py  graph_recall.py  models.py  provenance.py
app/curriculum/: __init__.py  memory.py  policy.py  types.py
app/prosody/: __init__.py  analysis.py  pronounce.py  server.py
app/security/: __init__.py  recall_input.py
corpus/: manifest.yaml
corpus/texts/: README.md  dickinson-because-i-could-not-stop-for-death.txt  frost-stopping-by-woods.txt  kilmer-trees.txt  lazarus-the-new-colossus.txt  whitman-o-captain-my-captain.txt
docs/: By_Heart_Capstone_Blueprint_Second_Draft.md  HOW_THIS_APP_USES_AGENTIC_WORKFLOW.md  HOW_THIS_APP_WAS_BUILT.md
docs/Kaggle/: Capstone_Project_Hackathon_Description.md  Capstone_Project_Hackathon_Evaluation.md  Capstone_Project_Hackathon_Overview.md  Capstone_Project_Hackathon_Rules.md  Capstone_Project_Hackathon_Rules_Section_3-18.md  Capstone_Project_Hackathon_Submission_Requirements.md  Capstone_Project_Hackathon_Tracks_and_Awards.md
evals/: __init__.py  injection_pii_eval.py  scenarios.py
tests/eval/: test_injection_pii_eval.py
tests/integration/: test_adaptive_plan.py  test_curriculum_plan.py  test_demo_runner.py  test_prosody_agent.py  test_prosody_mcp.py  test_recall_adjudicate.py
tests/unit/: test_adjudicate.py  test_course_store.py  test_curriculum_policy.py  test_learner_memory.py  test_prosody.py  test_provenance_gate.py  test_recall_input.py  test_recall_memory.py  test_scaffold.py
web/: Dockerfile  README.md  pyproject.toml
web/by_heart_web/: __init__.py  drive.py  server.py  sessions.py  viz.py
web/by_heart_web/static/: app.js  index.html
web/tests/: test_web_smoke.py
